# rules_perl

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  CODEOWNERS  CONTRIBUTORS  MIGRATING.md  MODULE.bazel  README.md  RELEASING.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  platforms.bzl  version.bzl
.bazelci/: presubmit.yml
.bcr/: metadata.template.json  source.template.json
.github/: copilot-instructions.md  release_notes.template
.github/workflows/: bcr-publish.yaml  copilot-review.yaml  release.yaml  release.yml
e2e/smoke/: BUILD.bazel  MODULE.bazel  hello_world.pl
examples/cpan/: BUILD
examples/cpan/IO/: Pty.pm  Tty.pm
examples/cpan/IO/Tty/: Constant.pm
examples/cpan/Test-Mock-Simple-0.10/lib/Test/Mock/: Simple.pm
examples/cpan/auto/IO/Tty/: Tty.xs  xssubs.c
examples/cpan_remote/: BUILD  BUILD.bazel  BUILD.fcgi.bazel  fcgi.BUILD  fcgi_import_test.t
examples/env/: BUILD  BUILD.bazel  env_test.t
examples/external_module/: BUILD  BUILD.bazel  complex_deps.t  pure_perl.t
examples/fibonacci/: BUILD  BUILD.bazel  fibonacci.pm  fibonacci_test.t
examples/genhtml/: BUILD  BUILD.genhtml.bazel  genhtml_test.t
examples/hello_world/: BUILD  hello_world.pl  hello_world_test.t
perl/: BUILD  BUILD.bazel  binary_wrapper.tpl  defs.bzl  deps.bzl  extensions.bzl  perl.bzl  perl_binary.bzl  perl_info.bzl  perl_library.bzl  perl_test.bzl  platforms.bzl  repo.bzl  toolchain.bzl
perl/cpan/: cpan_compiler.bzl  extensions.bzl  perl_cpan_compiler.bzl
perl/cpan/private/: BUILD.bazel  carton.bzl  carton_compiler.pl  perl_cpan_extension.bzl
perl/private/: BUILD  BUILD.dist.bazel.tpl  binary_wrapper.bat.tpl  binary_wrapper.sh.tpl  binary_wrapper.tpl  entrypoint.pl  perl.bzl  perl_xs.bzl  providers.bzl
perl/runfiles/: BUILD.bazel  Runfiles.pm
perl/runfiles/test/: BUILD.bazel  data.txt  runfiles_test.pl  runfiles_test.t
test/: BUILD  BUILD.bazel  perl_rule_test.bzl
test/bzl_version/: BUILD.bazel  bzl_version_test.t
test/data_dep/: BUILD  BUILD.bazel
test/toolchain_resolution/: BUILD.bazel  tool.pl  transition.bzl
