exports_files([
    "LICENSE.txt",
    "MODULE.bazel",
    "version.bzl",
])

[
    alias(
        name = name,
        actual = "//perl:{}".format(name),
        visibility = ["//visibility:public"],
    )
    for name in [
        "current_toolchain",
        "current_target_toolchain",
        "target_toolchain_type",
        "perl_darwin_amd64_toolchain",
        "perl_darwin_arm64_toolchain",
        "perl_linux_amd64_toolchain",
        "perl_linux_arm64_toolchain",
        "perl_windows_x86_64_toolchain",
        "perl_darwin_amd64_target_toolchain",
        "perl_darwin_arm64_target_toolchain",
        "perl_linux_amd64_target_toolchain",
        "perl_linux_arm64_target_toolchain",
        "perl_windows_x86_64_target_toolchain",
        "toolchain_type",
    ]
]
