load(":platforms.bzl", "PLATFORMS")
load(":toolchain.bzl", "current_perl_target_toolchain", "current_perl_toolchain", "perl_toolchain")

alias(
    name = "binary_wrapper.tpl",
    actual = "//perl/private:binary_wrapper.tpl",
    visibility = ["//visibility:public"],
)

# toolchain_type is the execution-platform toolchain type. Rules that
# only need Perl at build time (perl_xs, genrule, etc.) resolve this toolchain
# based on the *execution* platform. This is also the original toolchain_type
# name, preserved for backward compatibility.
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

# target_toolchain_type is the target-platform toolchain type. Rules that
# bundle a Perl interpreter into the final output (perl_binary, perl_test)
# resolve this toolchain based on the *target* platform so that the correct
# interpreter is included for the platform the binary will run on.
toolchain_type(
    name = "target_toolchain_type",
    visibility = ["//visibility:public"],
)

[
    (
        # toolchain_impl gathers information about the Perl toolchain.
        # See the PerlToolchain provider.
        perl_toolchain(
            name = "perl_{os}_{cpu}_toolchain_impl".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            runtime = ["@perl_{os}_{cpu}//:runtime".format(
                cpu = platform.cpu,
                os = platform.os,
            )],
            visibility = ["//visibility:public"],
        ),

        # Exec toolchain: resolved based on exec platform constraints.
        # Used by build-time rules (perl_xs, genrule, etc.).
        toolchain(
            name = "perl_{os}_{cpu}_toolchain".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            exec_compatible_with = platform.compatible_with,
            toolchain = ":perl_{os}_{cpu}_toolchain_impl".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            toolchain_type = ":toolchain_type",
            visibility = ["//visibility:public"],
        ),

        # Target toolchain: resolved based on target platform constraints.
        # Used by perl_binary / perl_test to bundle the correct interpreter
        # for the platform the binary will run on.
        toolchain(
            name = "perl_{os}_{cpu}_target_toolchain".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            target_compatible_with = platform.compatible_with,
            toolchain = ":perl_{os}_{cpu}_toolchain_impl".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            toolchain_type = ":target_toolchain_type",
            visibility = ["//visibility:public"],
        ),
    )
    for platform in PLATFORMS
]

# This rule exists so that the current exec perl toolchain can be used in the
# `toolchains` attribute of other rules, such as genrule. It allows exposing a
# perl_toolchain after toolchain resolution has happened, to a rule which
# expects a concrete implementation of a toolchain, rather than a
# toolchain_type which could be resolved to that toolchain.
#
# See https://github.com/bazelbuild/bazel/issues/14009#issuecomment-921960766
current_perl_toolchain(
    name = "current_toolchain",
    visibility = ["//visibility:public"],
)

# Same as current_toolchain but resolves based on the target platform.
current_perl_target_toolchain(
    name = "current_target_toolchain",
    visibility = ["//visibility:public"],
)
