load(":platforms.bzl", "PLATFORMS")
load(":toolchain.bzl", "current_exec_perl_toolchain", "current_perl_toolchain", "perl_toolchain")

alias(
    name = "binary_wrapper.tpl",
    actual = "//perl/private:binary_wrapper.tpl",
    visibility = ["//visibility:public"],
)

# toolchain_type defines a name for a kind of toolchain. Our toolchains
# declare that they have this type. Our rules request a toolchain of this type.
# Bazel selects a toolchain of the correct type that satisfies platform
# constraints from among registered toolchains.
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "exec_toolchain_type",
    visibility = ["//visibility:public"],
)

[
    (
        # toolchain_impl gathers information about the Perl toolchain.
        # See the PerlToolchain provider.
        perl_toolchain(
            name = "perl_{os}_{cpu}_toolchain_impl".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            runtime = ["@perl_{os}_{cpu}//:runtime".format(
                cpu = platform.cpu,
                os = platform.os,
            )],
            visibility = ["//visibility:public"],
        ),

        # toolchain is a Bazel toolchain that expresses execution and target
        # constraints for toolchain_impl. This target should be registered by
        # calling register_toolchains in a WORKSPACE file.
        toolchain(
            name = "perl_{os}_{cpu}_toolchain".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            target_compatible_with = platform.target_compatible_with,
            toolchain = ":perl_{os}_{cpu}_toolchain_impl".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            toolchain_type = ":toolchain_type",
            visibility = ["//visibility:public"],
        ),
        toolchain(
            name = "perl_{os}_{cpu}_toolchain_exec".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            exec_compatible_with = platform.target_compatible_with,
            toolchain = ":perl_{os}_{cpu}_toolchain_impl".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            toolchain_type = ":exec_toolchain_type",
            visibility = ["//visibility:public"],
        ),

        # Host-fallback toolchain: constrained on the execution platform only,
        # with no target constraint. When these are registered after the
        # target-constrained toolchains above, a native perl still wins whenever
        # the target platform has one. But a perl_binary used purely as a
        # build-time tool (for example lcov's report generators) still resolves
        # against the host perl when the target platform has no native perl,
        # such as an embedded or RTOS cross-compile. This restores the pre-1.0
        # behaviour where perl toolchains carried no target constraint.
        toolchain(
            name = "perl_{os}_{cpu}_toolchain_any_target".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            exec_compatible_with = platform.target_compatible_with,
            toolchain = ":perl_{os}_{cpu}_toolchain_impl".format(
                cpu = platform.cpu,
                os = platform.os,
            ),
            toolchain_type = ":toolchain_type",
            visibility = ["//visibility:public"],
        ),
    )
    for platform in PLATFORMS
]

# This rule exists so that the current perl toolchain can be used in the `toolchains` attribute of
# other rules, such as genrule. It allows exposing a perl_toolchain after toolchain resolution has
# happened, to a rule which expects a concrete implementation of a toolchain, rather than a
# toolchain_type which could be resolved to that toolchain.
#
# See https://github.com/bazelbuild/bazel/issues/14009#issuecomment-921960766
current_perl_toolchain(
    name = "current_toolchain",
    visibility = ["//visibility:public"],
)

current_exec_perl_toolchain(
    name = "current_exec_toolchain",
    visibility = ["//visibility:public"],
)
